--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,49 @@
 --index-url https://download.pytorch.org/whl/cu118
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
 asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
 backcall==0.2.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 colorama==0.4.6
 comm==0.1.4
+dataclasses-json==0.6.1
 debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.1.3
 executing==2.0.0
 filelock==3.12.4
+frozenlist==1.4.0
 fsspec==2023.10.0
+greenlet==3.0.0
 idna==3.4
 ipykernel==6.25.2
 ipython==8.16.1
 jedi==0.19.1
 Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
 jupyter_client==8.4.0
 jupyter_core==5.4.0
+langchain==0.0.320
+langsmith==0.0.49
 llvmlite==0.41.1
 MarkupSafe==2.1.3
+marshmallow==3.20.1
 matplotlib-inline==0.1.6
 more-itertools==10.1.0
 mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 networkx==3.2
 numba==0.58.1
 numpy==1.26.1
+openai==0.28.1
 openai-whisper==20230918
 packaging==23.2
 parso==0.8.3
@@ -36,15 +53,21 @@ platformdirs==3.11.0
 prompt-toolkit==3.0.39
 psutil==5.9.6
 pure-eval==0.2.2
+pydantic==2.4.2
+pydantic_core==2.10.1
 Pygments==2.16.1
 python-dateutil==2.8.2
 pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.1
 regex==2023.10.3
 requests==2.31.0
 six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.22
 stack-data==0.6.3
 sympy==1.12
+tenacity==8.2.3
 tiktoken==0.3.3
 torch==2.1.0+cu118
 torchaudio==2.1.0+cu118
@@ -52,6 +75,8 @@ torchvision==0.16.0+cu118
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.11.2
+typing-inspect==0.9.0
 typing_extensions==4.8.0
 urllib3==2.0.7
 wcwidth==0.2.8
+yarl==1.9.2
