--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,27 @@ anyio==3.7.1
 asttokens==2.4.0
 async-timeout==4.0.3
 attrs==23.1.0
+av==10.0.0
 backcall==0.2.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.1.4
+ctranslate2==3.20.0
 dataclasses-json==0.6.1
 debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.1.3
 executing==2.0.0
+faster-whisper==0.9.0
 filelock==3.12.4
+flatbuffers==23.5.26
 frozenlist==1.4.0
 fsspec==2023.10.0
 greenlet==3.0.0
+huggingface-hub==0.17.3
+humanfriendly==10.0
 idna==3.4
 ipykernel==6.25.2
 ipython==8.16.1
@@ -43,6 +50,7 @@ nest-asyncio==1.5.8
 networkx==3.2
 numba==0.58.1
 numpy==1.26.1
+onnxruntime==1.16.1
 openai==0.28.1
 openai-whisper==20230918
 packaging==23.2
@@ -51,11 +59,13 @@ pickleshare==0.7.5
 Pillow==9.3.0
 platformdirs==3.11.0
 prompt-toolkit==3.0.39
+protobuf==4.24.4
 psutil==5.9.6
 pure-eval==0.2.2
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
+pyreadline3==3.4.1
 python-dateutil==2.8.2
 pywin32==306
 PyYAML==6.0.1
@@ -69,6 +79,7 @@ stack-data==0.6.3
 sympy==1.12
 tenacity==8.2.3
 tiktoken==0.3.3
+tokenizers==0.14.1
 torch==2.1.0+cu118
 torchaudio==2.1.0+cu118
 torchvision==0.16.0+cu118
