--- a/requirements.txt
+++ b/requirements.txt
@@ -30,12 +30,14 @@ humanfriendly==10.0
 idna==3.4
 ipykernel==6.25.2
 ipython==8.16.1
+ipywidgets==8.1.1
 jedi==0.19.1
 Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
 jupyter_client==8.4.0
 jupyter_core==5.4.0
+jupyterlab-widgets==3.0.9
 langchain==0.0.320
 langsmith==0.0.49
 llvmlite==0.41.1
@@ -90,4 +92,5 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 urllib3==2.0.7
 wcwidth==0.2.8
+widgetsnbextension==4.0.9
 yarl==1.9.2
